--- a/tools/sorcer-resolver/pom.xml
+++ b/tools/sorcer-resolver/pom.xml
@@ -25,6 +25,7 @@
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
 
+    <name>SORCER tools :: resolver</name>
     <artifactId>sorcer-resolver</artifactId>
 
     <dependencies>
