--- a/configs/sorcer-boot.config
+++ b/configs/sorcer-boot.config
@@ -89,7 +89,7 @@ com.sun.jini.start {
             Booter.resolveCodebase(new String[]{
                 "org.sorcersoft.blitz:blitz-common",
                 "org.sorcersoft.blitz:blitz-proxy",
-                "net.jini.lookup:jmx-lookup",
+                "net.jini.lookup:jmx-lookup:2.1",
                 "org.apache.river:outrigger-dl",
  			    "org.sorcersoft.blitz:blitz-ui"
             }),
@@ -101,7 +101,7 @@ com.sun.jini.start {
             	"org.sorcersoft.blitz:blitz-ui",
             	"org.apache.river:outrigger-dl",
             	"com.sleepycat:je",
-                "net.jini.lookup:jmx-lookup",
+                "net.jini.lookup:jmx-lookup:2.1",
             	"net.jini.lookup:serviceui",
             	"net.jini:jsk-lib",
             	"net.jini:jsk-platform"
