Added cfg modules for Sorcer system services

--- a/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
+++ b/sos-providers/cataloger/cataloger-cfg/src/main/resources/cataloger.config
@@ -4,21 +4,21 @@ import net.jini.jeri.tcp.*;
 import net.jini.core.entry.*;
 import net.jini.lookup.entry.*;
 import sorcer.core.*;
-import sorcer.provider.boot.Booter;
 
 sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
-		publishedInterfaces = new Class[] { sorcer.core.Cataloger.class };
+		publishedInterfaces = new Class[] { sorcer.core.provider.Cataloger.class };
 		description = "Dynamic catalog of SORCER service providers";
 		location = "Sorcersoft.com Lab";
 		spaceEnabled = false;
-		entries = new Entry[] { 
+		entries = new Entry[] {
+			sorcer.core.provider.cataloger.ui.CatalogerUIFactory.getMainUIDescriptor(),
 			new Comment("Welcome to exertion-oriented programming!"), 
 			new Location("", "", "Sorcersoft.com") };
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
-        // exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(Booter.getHostAddress(), 0), new BasicILFactory());
+         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
         
          iconName="sorcer-ico.png";
 }
