--- a/sos-providers/exerter/pom.xml
+++ b/sos-providers/exerter/pom.xml
@@ -12,6 +12,7 @@
 	<packaging>pom</packaging>
 
 	<modules>
+		<module>exerter-cfg</module>
 		<module>exerter-prv</module>
 	</modules>
 </project>
