--- a/sos-providers/exertmonitor/pom.xml
+++ b/sos-providers/exertmonitor/pom.xml
@@ -11,6 +11,7 @@
 	<name>SORCER OS :: providers :: exertmonitor</name>
 	<packaging>pom</packaging>
 	<modules>
+		<module>exertmonitor-cfg</module>
 		<module>exertmonitor-prv</module>
 	</modules>
 </project>
