--- a/sos-providers/logger/pom.xml
+++ b/sos-providers/logger/pom.xml
@@ -11,6 +11,7 @@
 	<name>SORCER OS :: providers :: logger</name>
 	<packaging>pom</packaging>
 	<modules>
+		<module>logger-cfg</module>
 		<module>logger-prv</module>
 		<module>logger-sui</module>
         <module>logger-api</module>
