--- a/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
+++ b/sos-providers/exerter/exerter-cfg/src/main/resources/exerter.config
@@ -10,7 +10,8 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
-import sorcer.util.ExertManager;
+import sorcer.util.ServiceExerter;
+import sorcer.service.Exerter;
 
 sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
@@ -24,9 +25,10 @@ sorcer.core.provider.ServiceProvider {
 		
 		// persist and reuse service ID
 		providerIdPersistent = false;
+		exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
 		
-		// service beans	
-		beanClasses = new Class[] { sorcer.util.ExertManager.class }; 
+		// service beans
+		beanClasses = new Class[] { sorcer.util.ServiceExerter.class };
 		
 		iconName="sorcer.jpg";
 }
