--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>tools</module>
 		<module>tests</module>
 		<module>examples</module>
+        <module>sorcer-rio</module>
     </modules>
 
     <licenses>
