--- a/sorcer-rio/sorcer-rio-cli/pom.xml
+++ b/sorcer-rio/sorcer-rio-cli/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tools</artifactId>
+        <artifactId>sorcer-rio</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sos-rio-start</artifactId>
-    <name>SORCER tools :: rio-start</name>
+    <artifactId>sorcer-rio-cli</artifactId>
+    <name>SORCER :: Rio :: CLI</name>
 
     <dependencies>
         <dependency>
