--- a/tools/sorcer-pkg/pom.xml
+++ b/tools/sorcer-pkg/pom.xml
@@ -7,18 +7,18 @@
     <artifactId>sorcer-pkg</artifactId>
     <name>SORCER UNIX distribution</name>
   <modelVersion>4.0.0</modelVersion>
-  <packaging>jar</packaging>
-  <dependencies>
-    <dependency>
-      <groupId>org.sorcersoft.sorcer</groupId>
-      <artifactId>distribution</artifactId>
-      <version>1.0-M4-SNAPSHOT</version>
-      <type>zip</type>
-    </dependency>
-  </dependencies>
-  <profiles>
+    <packaging>pom</packaging>
+    <profiles>
     <profile>
         <id>release</id>
+        <dependencies>
+            <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>distribution</artifactId>
+                <version>1.0-M4-SNAPSHOT</version>
+                <type>zip</type>
+            </dependency>
+        </dependencies>
         <build>
         <plugins>
           <plugin>
