[pom] update distribution dependencies, fix int-tests deps. [assembly] update distribution poms

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -52,9 +52,21 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-rio-start</artifactId>
+            <artifactId>sorcer-rio-start</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-rio-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+<!--
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-rio-cli</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+-->
 
         <!-- sos-providers -->
         <dependency>
