--- a/sorcer-rio/sorcer-rio-lib/pom.xml
+++ b/sorcer-rio/sorcer-rio-lib/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>sorcer</artifactId>
+        <artifactId>sorcer-rio</artifactId>
         <version>1.0-M4-SNAPSHOT</version>
     </parent>
 
