--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<v.sleepycat>4.1.21</v.sleepycat>
 		<v.rio>5.0-M4-S4</v.rio>
 		<v.groovy>2.1.3</v.groovy>
-		<v.sigar>1.6.4</v.sigar>
+		<v.sigar>1.6.4-2</v.sigar>
 		<v.lockmgr>0.2.sorcer2</v.lockmgr>
         <v.slf4j>1.7.5</v.slf4j>
         <v.junit>4.11</v.junit>
