--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <v_sos_release>1.0-M3</v_sos_release>
 		<v.jini>2.2.1</v.jini>
 		<v.blitz>2.2.0</v.blitz>
-		<v.sleepycat>4.1.21</v.sleepycat>
+		<!--<v.sleepycat>5.0.103</v.sleepycat>-->
+		<v.sleepycat>4.0.92</v.sleepycat>
 		<v.rio>5.0-M4-S4</v.rio>
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4-2</v.sigar>
