fix testing - replace river ServiceStarter with sorcer's in ant xmls, disable jul configuration in blitz.config

--- a/configs/blitz/configs/blitz.config
+++ b/configs/blitz/configs/blitz.config
@@ -199,4 +199,7 @@ org.dancres.blitz {
     recoveredTxnPreparer = new BasicProxyPreparer();
     activationIdPreparer = new BasicProxyPreparer();
     activationSysPreparer = new BasicProxyPreparer();
+
+    //use default JUL configuration
+    ignoreLogConfig = Boolean.TRUE;
 }
