--- a/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
+++ b/sos-providers/other-configs/blitz-cfg/src/main/resources/blitz.config
@@ -199,4 +199,7 @@ org.dancres.blitz {
     recoveredTxnPreparer = new BasicProxyPreparer();
     activationIdPreparer = new BasicProxyPreparer();
     activationSysPreparer = new BasicProxyPreparer();
+
+    //use default JUL configuration
+    ignoreLogConfig = Boolean.TRUE;
 }
